--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -7,13 +7,34 @@ section.step-guide {
 }
 
 section.chart-type {
+	padding-bottom: 50px;
 	.custom-radio {
-		label {
-			margin-right: 20px;
+		padding-left: 20px;
+	}
+}
 
-			input {
-				margin-right: 5px;	
-			}
+section.x-data-barchart {
+	padding-bottom: 50px;
+	.custom-form {
+		padding-left: 20px;
+		md-input-container {
+			width: 500px;
+			margin-bottom: 10px;
+		}
+	}
+}
+
+section.y-data-barchart {
+	padding-bottom: 50px;
+	.custom-form {
+		padding-left: 20px;
+		padding-bottom: 20px;
+		.padding {
+			padding-left: 20px;
+		}
+		md-input-container {
+			width: 500px;
+			margin-bottom: 10px;
 		}
 	}
 }
