--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,9 +1,33 @@
 section.step-guide {
   padding: 200px 0px 50px 0px;
 }
-section.chart-type .custom-radio label {
-  margin-right: 20px;
+section.chart-type {
+  padding-bottom: 50px;
 }
-section.chart-type .custom-radio label input {
-  margin-right: 5px;
+section.chart-type .custom-radio {
+  padding-left: 20px;
+}
+section.x-data-barchart {
+  padding-bottom: 50px;
+}
+section.x-data-barchart .custom-form {
+  padding-left: 20px;
+}
+section.x-data-barchart .custom-form md-input-container {
+  width: 500px;
+  margin-bottom: 10px;
+}
+section.y-data-barchart {
+  padding-bottom: 50px;
+}
+section.y-data-barchart .custom-form {
+  padding-left: 20px;
+  padding-bottom: 20px;
+}
+section.y-data-barchart .custom-form .padding {
+  padding-left: 20px;
+}
+section.y-data-barchart .custom-form md-input-container {
+  width: 500px;
+  margin-bottom: 10px;
 }
