--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,3 @@
-/*
-
-* Override Pages default styles or create your own styles here
-
-*/
+textarea.custom-height {
+  height: 100px !important;
+}
