--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -1,3 +1,13 @@
 textarea.custom-height {
 	height: 100px !important;
 }
+
+table {
+	color: #333333;
+	margin-top: 20px;
+}
+table thead th.bg-purple {
+	color: #333333;
+	background-color: #E2DEEF;
+	border: none;
+}
