--- a/assets/css/ranking.css
+++ b/assets/css/ranking.css
@@ -25,7 +25,7 @@
 }
 
 .ranking-content .ranking-content-inner {
-  height: 110px;
+  height: 100%;
   overflow: hidden;
   color: black;
   padding: 10px 10px;
